--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
     "@googlemaps/js-api-loader": "^2.0.1",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@stripe/stripe-js": "^2.4.0",
@@ -20,6 +26,7 @@
     "csv-parse": "^5.5.2",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.294.0",
     "mapbox-gl": "^3.16.0",
     "next": "^16.0.1",
@@ -28,6 +35,7 @@
     "react-dom": "^18",
     "recharts": "^3.4.1",
     "resend": "^3.2.0",
+    "rrule": "^2.8.1",
     "stripe": "^14.9.0",
     "tailwind-merge": "^2.0.0",
     "bcryptjs": "^2.4.3"
