feat: Complete calendar system with reminders, follow-ups, and availability
- Enhanced free/busy checking with working hours and buffers
- Availability management API (working hours, timezone, blocked slots)
- Reminder system with email notifications
- Automated follow-up workflows (emails, tasks, CRM updates)
- Cron job endpoints for processing reminders and follow-ups
- Automatic reminder creation when events are created
- Follow-up event scheduling
- Contact status updates from events

Features:
- Working hours configuration per day of week
- Buffer times before/after events
- Blocked time slots
- Email reminders via Resend
- Follow-up task creation
- CRM contact status automation
- Scheduled follow-up events
- Vercel Cron integration

Complete world-class calendar automation system.

--- a/LeadMap-main/vercel.json
+++ b/LeadMap-main/vercel.json
@@ -1,8 +1,12 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "crons": [
+    {
+      "path": "/api/calendar/reminders/process",
+      "schedule": "*/5 * * * *"
+    },
+    {
+      "path": "/api/calendar/followups/process",
+      "schedule": "0 * * * *"
+    }
+  ]
 }
-
