Fix TypeScript build error for Vercel - Remove problematic cron syntax from comment - Make tsconfig include pattern more specific to exclude scripts folder - Add types and config folders to include pattern

--- a/LeadMap-main/tsconfig.json
+++ b/LeadMap-main/tsconfig.json
@@ -31,13 +31,25 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "app/**/*.ts",
+    "app/**/*.tsx",
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "components/**/*.ts",
+    "components/**/*.tsx",
+    "types/**/*.ts",
+    "types/**/*.tsx",
+    "config/**/*.ts",
+    "config/**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "scripts"
+    "scripts",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx"
   ]
 }
