--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -31,6 +31,7 @@
     "mapbox-gl": "^3.16.0",
     "next": "^16.0.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^3.4.1",
@@ -50,6 +51,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "@types/bcryptjs": "^2.4.6"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.14"
   }
 }
