--- a/LeadMap-main/vercel.json
+++ b/LeadMap-main/vercel.json
@@ -55,6 +55,10 @@
     {
       "path": "/api/cron/process-email-queue",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/provider-health-check",
+      "schedule": "0 * * * *"
     }
   ]
 }
