--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -15,9 +15,9 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@fullcalendar/list": "^6.1.15",
     "@googlemaps/js-api-loader": "^2.0.1",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@stripe/stripe-js": "^2.4.0",
@@ -25,6 +25,7 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.38.4",
     "@tanstack/react-virtual": "^3.13.12",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
     "csv-parse": "^5.5.2",
     "csv-parser": "^3.2.0",
@@ -42,13 +43,15 @@
     "rrule": "^2.8.1",
     "stripe": "^14.9.0",
     "tailwind-merge": "^2.0.0",
-    "bcryptjs": "^2.4.3"
+    "twilio": "^5.10.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/jest": "^29.5.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
@@ -56,8 +59,6 @@
     "jest-environment-node": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.14"
+    "typescript": "^5"
   }
 }
