--- a/LeadMap-main/vercel.json
+++ b/LeadMap-main/vercel.json
@@ -1,67 +1,11 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm install",
   "crons": [
     {
-      "path": "/api/calendar/reminders/process",
-      "schedule": "*/5 * * * *"
-    },
-    {
-      "path": "/api/calendar/followups/process",
-      "schedule": "0 * * * *"
-    },
-    {
-      "path": "/api/calendar/cron/sync",
-      "schedule": "*/15 * * * *"
-    },
-    {
-      "path": "/api/calendar/cron/token-refresh",
-      "schedule": "0 * * * *"
-    },
-    {
-      "path": "/api/calendar/cron/sync-retry",
-      "schedule": "*/30 * * * *"
-    },
-    {
-      "path": "/api/calendar/cron/cleanup",
-      "schedule": "0 2 * * *"
-    },
-    {
-      "path": "/api/calendar/cron/webhook-renewal",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/cron/property-map-refresh",
-      "schedule": "0 */6 * * *"
-    },
-    {
-      "path": "/api/cron/prospect-enrich",
-      "schedule": "0 */4 * * *"
+      "path": "/api/sms/drip/run",
+      "schedule": "*/1 * * * *"
     },
     {
       "path": "/api/cron/process-emails",
-      "schedule": "* * * * *"
-    },
-    {
-      "path": "/api/cron/gmail-watch-renewal",
-      "schedule": "0 3 * * *"
-    },
-    {
-      "path": "/api/cron/sync-mailboxes",
-      "schedule": "*/5 * * * *"
-    },
-    {
-      "path": "/api/cron/process-email-queue",
-      "schedule": "* * * * *"
-    },
-    {
-      "path": "/api/cron/provider-health-check",
-      "schedule": "0 * * * *"
-    },
-    {
-      "path": "/api/cron/process-campaigns",
       "schedule": "* * * * *"
     }
   ]
