Implement: Store geocoded coordinates in Supabase for instant map loading - Add backfill script, Edge Function, and frontend optimizations

--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "backfill-geocodes": "tsx scripts/backfill-geocodes.ts"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
