--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -61,6 +61,7 @@
     "jest-environment-node": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
