--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -33,8 +33,12 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "googleapis": "^144.0.0",
+    "grapesjs": "^0.22.14",
+    "grapesjs-mjml": "^1.0.7",
+    "grapesjs-preset-newsletter": "^1.0.2",
     "lucide-react": "^0.294.0",
     "mapbox-gl": "^3.16.0",
+    "mjml": "^4.18.0",
     "next": "16.0.10",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.7",
