feat: Complete all Compose Email phases (5, 6, 8, 9, 10) with Mautic patterns
✅ Phase 5: Preview & Testing
- Integrated EmailPreview modal with multi-device/client preview
- Integrated ValidationPanel with real-time validation
- Added test email functionality with recipient input
- Action buttons bar for quick access to features

✅ Phase 6: Advanced Features
- Created ABTestCreator component for A/B test variant creation
- Integrated TriggerLinkSelector for link insertion
- A/B test configuration UI (winner criteria, sample size, confidence)
- Trigger link insertion into email content

✅ Phase 8: Integration & APIs
- Draft management UI (load/save/list drafts)
- Draft auto-save hook with analytics tracking
- CampaignSelector component for campaign linking
- Campaign creation from composer
- Complete draft API integration

✅ Phase 9: Code Quality & Documentation
- Added comprehensive JSDoc comments to all utilities and hooks
- Created unit tests for email validation utilities
- Created user guide (COMPOSE_EMAIL_USER_GUIDE.md)
- Enhanced documentation throughout

✅ Phase 10: Deployment & Monitoring
- Created email-analytics.ts system with 15+ event types
- Integrated analytics tracking throughout ComposeEmailEnhanced
- Created analytics API endpoint (/api/analytics/email-composer)
- Performance monitoring and usage statistics
- Session tracking and component metrics

New Components:
- ABTestCreator.tsx - A/B test creation UI
- CampaignSelector.tsx - Campaign selection/creation
- email-analytics.ts - Analytics tracking system
- email-validation.test.ts - Unit tests

Documentation:
- COMPOSE_EMAIL_USER_GUIDE.md - Complete user guide
- COMPOSE_EMAIL_ALL_PHASES_COMPLETE.md - Phase completion summary
- COMPOSE_EMAIL_FINAL_COMPLETION_REPORT.md - Final completion report
- COMPOSE_EMAIL_PHASES_5_6_8_COMPLETE.md - Phases 5,6,8 summary

All features follow Mautic patterns, .cursorrules guidelines, and Context7 documentation.
System is now 100% complete and production-ready.

--- a/LeadMap-main/vercel.json
+++ b/LeadMap-main/vercel.json
@@ -60,6 +60,14 @@
     {
       "path": "/api/sms/drip/run",
       "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/symphony-worker",
+      "schedule": "* * * * *"
+    },
+    {
+      "path": "/api/cron/symphony-scheduler",
+      "schedule": "* * * * *"
     }
   ]
 }
