--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -50,6 +50,7 @@
     "recharts": "^3.4.1",
     "resend": "^3.2.0",
     "rrule": "^2.8.1",
+    "simplebar-react": "^3.2.5",
     "stripe": "^14.9.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
