--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -22,9 +22,12 @@
     "@googlemaps/js-api-loader": "^2.0.1",
     "@googlemaps/react-wrapper": "^1.2.0",
     "@iconify/react": "^6.0.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@sendgrid/mail": "^8.1.6",
     "@stripe/stripe-js": "^2.4.0",
@@ -62,7 +65,7 @@
     "recharts": "^3.4.1",
     "resend": "^3.2.0",
     "rrule": "^2.8.1",
-    "simplebar-react": "^3.2.5",
+    "simplebar-react": "^3.3.2",
     "stripe": "^14.9.0",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.0.0",
