feat: Replace Recent Activity and Tasks widgets with TailwindAdmin-Nextjs equivalents
- Replace RecentActivityWidget with TailwindAdmin-Nextjs UpcomingActivity structure
- Replace TasksWidget with TailwindAdmin-Nextjs Tasks structure
- Add framer-motion and @iconify/react dependencies
- Use TailwindAdmin components: Badge, SimpleBar, motion animations, Icon
- Preserve all API functionality (data prop integration with transformation)
- Add data transformation logic to map API data to TailwindAdmin format
- Maintain backward compatibility with existing API data structures

--- a/LeadMap-main/package.json
+++ b/LeadMap-main/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.26.2",
     "googleapis": "^144.0.0",
     "grapesjs": "^0.22.14",
     "grapesjs-mjml": "^1.0.7",
