--- a/LeadMap-main/.vscode/settings.json
+++ b/LeadMap-main/.vscode/settings.json
@@ -8,6 +8,6 @@
   },
   "eslint.packageManager": "pnpm",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   }
 }
